frame/support/test/tests/pallet_ui/storage_invalid_attribute.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::Hooks;
	use frame_system::pallet_prelude::BlockNumberFor;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(_);

	#[pallet::call]
	impl<T: Config> Pallet<T> {}

	#[pallet::storage]
	#[pallet::generate_store(pub trait Store)]
	type Foo<T> = StorageValue<u8, u8>;
}

fn main() {
}
